--- a/explore/training_testing_exploration.ipynb
+++ b/explore/training_testing_exploration.ipynb
@@ -442,7 +442,7 @@
     }
    ],
    "source": [
-    "data_summary_df = pd.read_csv('temp_data/run1_image_aggregation.csv')\n",
+    "data_summary_df = pd.read_csv('temp_data/tier1and2_image_aggregation.csv')\n",
     "display(data_summary_df)"
    ]
   },
@@ -2447,6 +2447,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
